--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
